--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flame: ^1.3.0
   google_fonts: ^3.0.1
+  go_router: ^6.0.1
 
 dev_dependencies:
   flutter_test:
