--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/ep_1/images/game/
+    - assets/images/ep_2/images/game/
     - assets/images/game/
     - assets/images/game/background/
 
