adds firebase hosting

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flame: ^1.3.0
   google_fonts: ^3.0.1
   go_router: ^6.0.1
+  firebase_core: ^2.4.1
 
 dev_dependencies:
   flutter_test:
