--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flame: ^1.3.0
   google_fonts: ^5.0.0
+  flame: ^1.3.0
+  flame_audio: ^2.0.3
+
+dependency_overrides:
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +67,10 @@ flutter:
   assets:
     - assets/images/game/
     - assets/images/game/background/
+    - assets/audio/underscore.mp3
+    - assets/audio/normal_platform.mp3
+    - assets/audio/game_over.mp3
+    - assets/audio/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
